fix(uni-app-x web): 修复z-index默认值调整引起的sticky-header默认被后面的item覆盖的Bug

--- a/packages/uni-h5/style/framework/uvue.css
+++ b/packages/uni-h5/style/framework/uvue.css
@@ -170,6 +170,10 @@ uni-app uni-sticky-header {
   justify-content: flex-start;
 }
 
+uni-app uni-sticky-header {
+  z-index: 1;
+}
+
 /* 此样式可被manifest.json内配置的flex-direction重置 */
 uni-app uni-page-body,
 uni-app uni-left-window .uni-left-window,
